[project]
name = "ScopeSim_Data"
version = "0.0.1-alpha"
description = "Data often used by ScopeSim and related tools."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Hugo Buddelmeijer", email="hugo@buddelmeijer.nl"},
]
maintainers = [
    {name = "Kieran Leschinski", email="kieran.leschinski@unive.ac.at"},
    {name = "Hugo Buddelmeijer", email="hugo@buddelmeijer.nl"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = []

[project.urls]
"Source" = "https://github.com/AstarVienna/ScopeSim_Data"

# TODO: Figure out whether the below actually puts the script in the PATH somewhere.
[tools.setuptools]
script_files = "bin/download_scopesim_data.sh"

[tool.setuptools.packages]
find = {}
